@@ -861,6 +861,7 @@ Grouped in options:\
 
 ##### Argentina
 [Ámbito](https://www.ambito.com) -
+[El Cronista](https://www.cronista.com) -
 [La Nación](https://www.lanacion.com.ar)*
 
 Grouped in options:\
