@@ -151,6 +151,7 @@
     "*://*.crainscleveland.com/*",
     "*://*.crainsdetroit.com/*",
     "*://*.crainsnewyork.com/*",
+    "*://*.cronista.com/*",
     "*://*.csmonitor.com/*",
     "*://*.curbed.com/*",
     "*://*.cw.com.tw/*",
@@ -738,6 +739,7 @@
     "*://*.nyt.com/*",
     "*://*.pasedigital.cl/*",
     "*://*.wallkit.net/*",
+    "*://*.wyleex.com/*",
     "*://webcache.googleusercontent.com/*"
   ],
   "version": "3.1.9.9"
