@@ -2,6 +2,7 @@
 Changelog Bypass Paywalls Clean - Chrome
 
 Post-release
+Add El Cronista (Argentina)
 Add GauchaZH
 Add Golem.de (link to archive.is)
 Add TechTarget Group
